<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Luna Ring</string>
    <string name="app_version">Version %s</string>
    <string name="text_watch_pair_fail">Your %s was unable to pair</string>
    <string name="text_watch_pair_success">Your %s is successfully paired.</string>
    <string name="text_email">Email</string>
    <string name="text_password_hint">Password</string>
    <string name="text_email_hint">Email id</string>
    <string name="text_back_button">Back Button</string>
    <string name="text_no_device_found">No Devices Found</string>
    <string name="text_get_started">Get started</string>
    <string name="text_shop">Shop</string>
    <string name="text_activity">Workouts</string>
    <string name="text_watchfaces">Watchfaces</string>
    <string name="text_settings">Settings</string>
    <string name="text_faqs">FAQs</string>
    <string name="text_health_fitness">Fitness and health</string>
    <string name="text_today">Today</string>
    <string name="text_warranty_registration">Warranty registration</string>
    <string name="text_terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="text_terms_and_condition_new">Terms and Conditions</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_idle_alert">Idle alert</string>
    <string name="text_edit_health_overview">Edit health overview</string>
    <string name="text_drink_water">Drink water</string>
    <string name="text_meal_reminder">Meal Reminder</string>
    <string name="text_medicine_reminder">Medicine Reminder</string>
    <string name="text_my_orders">My orders</string>
    <string name="text_camera_shutter">Camera shutter</string>
    <string name="text_camera_switch">Camera switch</string>
    <string name="text_spo2_measurement">Spo2 measurement</string>
    <string name="text_spo2">Spo2</string>
    <string name="text_weather_settings">Weather settings</string>
    <string name="text_my_alarms">My alarms</string>
    <string name="text_hand_wash">Hand wash</string>
    <string name="text_my_reminders">My reminders</string>
    <string name="text_upload_agps">Upload AGPS</string>
    <string name="text_quick_reply">Quick reply</string>
    <string name="text_rapid_eye_movement">Rapid eye movement</string>
    <string name="text_google_fit">Google Fit</string>
    <string name="text_world_clock">World clock</string>
    <string name="text_stocks">Stocks</string>
    <string name="text_add_stocks">Add Stocks</string>
    <string name="text_edit">Edit</string>
    <string name="text_unpair">Unpair</string>
    <string name="text_forgot_pass">Forgot Password</string>
    <string name="text_continue">Continue</string>
    <string name="text_ok">Ok</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="text_something_went_wrong">Something went wrong!! Please try again after sometime.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_success">Success</string>
    <string name="text_back">Back</string>
    <string name="text_next">Next</string>
    <plurals name="text_device_found">
        <item quantity="one">Device Found</item>
        <item quantity="other">Devices Found</item>
    </plurals>
    <string name="facebook_app_id">2519321131726390</string>
    <string name="text_no_device_connected">No Device Connected</string>
    <string name="text_permission_required">Permission Required</string>
    <string name="text_factory_reset">Factory reset</string>
    <string name="text_allow">Allow</string>
    <string name="text_permission_denial_location">Location Permission required to Pair with device. Please go to settings and enable the required permissions.</string>
    <string name="text_permission_denial_location_message">Location Permission required to Pair with device</string>
    <string name="text_save">Save</string>
    <string name="text_unit">Unit</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_max_alarm_reached">Max Alarm Limit Reached</string>
    <string name="text_max_screenshot_message">You have already added %d Screenshots. Delete other Screenshots to add new ones.</string>
    <string name="text_close">Close</string>
    <string name="text_got_it">Got it</string>
    <string name="text_remove">Remove</string>
    <string name="text_start_measurement">Start Measurement</string>
    <string name="text_freqency">Frequency</string>
    <string name="text_time">Time</string>
    <string name="distance">Distance</string>
    <string name="total_distance">Total distance</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="text_done">Done</string>
    <string name="text_add">Add</string>
    <string name="text_delete">Delete</string>
    <string name="text_submitting_feedback">Submitting Feedback please wait…</string>
    <string name="text_add_reminder">Add Reminder</string>
    <string name="text_temperature_unit">Temperature unit</string>
    <string name="text_google_fit_enable">Google Fit login successful</string>
    <string name="text_google_fit_disable">Google Fit logout successful</string>
    <string name="text_alert">Alert</string>
    <string name="text_alert_value">Alert Value</string>
    <string name="text_search">Search</string>
    <string name="text_update_watchface">Update watch face</string>
    <string name="text_similar_watchfaces">Similar watch faces</string>
    <string name="text_lets_go">Create now</string>
    <string name="text_design_own_watchface">Show your creativity and design your own watch faces</string>
    <string name="text_customise_watchface">Customise Watchface</string>
    <string name="text_custom_watchface">Custom watch face</string>
    <string name="text_current_watch_face">CURRENT WATCH FACE</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_select_font_color">Select Font Color</string>
    <string name="text_device_not_connected_forcefully">Device not connected. Long press to unpair anyway</string>
    <string name="text_update_now">Update now</string>
    <string name="text_walk_reminder">Walk Reminder</string>
    <string name="heart_rate">Heart rate</string>
    <string name="text_stress">Stress</string>
    <string name="text_cycle_tracking">Cycle tracking</string>
    <string name="text_sleep_reminder">Sleep Reminder</string>
    <string name="text_hra3_1">Your heart beats around 100,000 times daily, adjusting its pace according to your activity and emotions. Heart rate, measured in beats per minute (BPM), offers valuable health iHave you ever wondered if a vigorous heart rate during exercise is a good thing? The answer, like most things in life, is \"it depends.\" Here’s a guide to help you understand your heart rate zones and how they can guide your workouts for your fitness goals.</string>
    <string name="why_does_heart_rate_matter">Why does heart rate matter?</string>
    <string name="text_hra3_2">Heart rate acts as a biofeedback mechanism during exercise, indicating intensity levels. Understanding your heart rate helps optimise workouts, improving efficiency and safety.</string>
    <string name="heart_rate_zones_decoded">Heart rate zones decoded</string>
    <string name="text_hra3_3">There are different \"zones\" based on your maximum heart rate (MHR). These are the highest number of beats per minute your heart can reach during exercise. A simple way to estimate your MHR is by subtracting your age from 220. Here\'s a breakdown of the heart rate zones and how they feel:</string>
    <string name="text_hra3_4">Another zone you must understand is the Recovery zone. After you finish working out your heartbeat eventually returns to baseline. In other words, heart rate recovery is a measurement of your heart’s ability to return the rate of pumping blood that it is used to when you are at rest.* The age-by-age breakdown of heart rate recovery looks like this:</string>
    <string name="why_do_you_need_a_high_heart_rate_workout">Why do you need a high heart rate workout?</string>
    <string name="text_hra3_5">High-intensity exercise offers many benefits like improved cardiovascular health, weight management, and muscle building. But if you have a history of heart disease, high blood pressure, anginas, or arrhythmias, or if you are pregnant or elderly, consult with your doctor before performing any high-intensity exercise. Extremely high-intensity activities if not done in moderation can increase your risk of atrial fibrillation and cause stroke*.</string>
    <string name="the_power_of_combining_hr_zones">The power of combining hr zones</string>
    <string name="text_hra3_6"><![CDATA[The best results come from mixing things up. Your Luna Ring can track your heart rate during different activities. Aim for a balance of high-intensity workouts (>80% MHR) with lower-intensity activities (<70% MHR). Even low-intensity exercise benefits your heart, reduces stress, and is suitable for all fitness levels.\n\n Remember, exercise is a journey, not the destination. Listen to your body, find what works for you, and use the Luna Ring to optimize your training and reach your fitness goals.]]></string>
    <string name="text_hra4_1">Your sleeping heart rate is an indicator of how well you are resting. When you’re asleep, your heart rate dips and creates unique patterns throughout the night. The Luna Ring tracks these unique patterns to help you identify areas for improvement. Here are the four sleeping heart rate curves you should know:</string>
    <string name="the_crescent_moon">The crescent moon</string>
    <string name="text_hra4_2">Your body undergoes different sleep stages during the night, and your blood pressure and heart rate begin to drop in your sleep\'s initial phases. The crescent moon curve reflects a steady dip in your heart rate as you fall asleep, reaching its lowest point around mid-sleep. It signifies optimal recovery and as you wake up in the morning, your heart rate rises indicating you are relaxed after a good night’s sleep.</string>
    <string name="the_descent">The descent</string>
    <string name="text_hra4_3">The descent curve suggests your body is working hard at night and that your resting heart rate (RHR) is reaching its lowest in the morning instead of the middle of your sleep. If you’ve had a late-night meal, a heavy workout, or consumed alcohol before sleeping, you might see this pattern as a marker of a disrupted sleep quality.</string>
    <string name="the_dune">The dune</string>
    <string name="text_hra4_4">The dune curve indicates that your heart rate increases right after you fall asleep, disrupting your sleep stage and causing exhaustion. It might happen if you went to bed later than usual, causing the release of the sleep-aiding hormone melatonin or because your airways are congested. This can keep your metabolism burning and disrupt your sleep quality.</string>
    <string name="the_plateau">The plateau</string>
    <string name="text_hra4_5">A consistently elevated heart rate throughout the night is reflected in a plateau curve. This pattern indicates chronic stress hindering your body\'s ability to recover fully. If you see this frequently, practice rest and relaxing techniques, schedule extra downtime, or consider taking a power nap.</string>
    <string name="text_hra4_6">By understanding your heart rate patterns, you can implement better sleep routines to enhance your sleep quality and wake up feeling energized</string>
    <string name="text_mon">Mon</string>
    <string name="text_tue">Tue</string>
    <string name="text_wed">Wed</string>
    <string name="text_thu">Thu</string>
    <string name="text_fri">Fri</string>
    <string name="text_sat">Sat</string>
    <string name="text_sun">Sun</string>
</resources>