<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oreo.ui.heartrate.article.HrArticle3Fragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/image_article_3_banner_1" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra3_1"
                android:textColor="@color/white_64" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/why_does_heart_rate_matter" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra3_2"
                android:textColor="@color/white_64" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/heart_rate_zones_decoded" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra3_3"
                android:textColor="@color/white_64" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra3_4"
                android:textColor="@color/white_64" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_article_3_banner_2" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/why_do_you_need_a_high_heart_rate_workout" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra3_5"
                android:textColor="@color/white_64" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/the_power_of_combining_hr_zones" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra3_6"
                android:textColor="@color/white_64" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>