<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oreo.ui.heartrate.article.HrArticle4Fragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_article_4_banner_1" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra4_1"
                android:textColor="@color/white_64" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/the_crescent_moon" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra4_2"
                android:textColor="@color/white_64" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_article_4_banner_2" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/the_descent" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra4_3"
                android:textColor="@color/white_64" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_article_4_banner_3" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/the_dune" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra4_4"
                android:textColor="@color/white_64" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_article_4_banner_4" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/the_plateau" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra4_5"
                android:textColor="@color/white_64" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_article_4_banner_5" />

            <TextView
                style="@style/S14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_hra4_6"
                android:textColor="@color/white_64" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>